Change integration tests work with real db